--- a/config/conf.d/site3.conf
+++ b/config/conf.d/site3.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    server_name php56;
-    root /var/www/html;
+    server_name php81;
+    root /var/www/html/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
@@ -19,16 +19,22 @@ server {
     location = /robots.txt  { access_log off; log_not_found off; }
 
     error_page 404 /index.php;
-
+client_body_timeout 10;
+client_header_timeout 10;
+keepalive_timeout 5 5;
+send_timeout 10;
+server_tokens off;
     location ~ \.php$ {
 #        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
     try_files $uri =404;
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    fastcgi_pass app_php56:9000;
+    fastcgi_pass app_php81:9000;
     fastcgi_index index.php;
     include fastcgi_params;
+    server_tokens off;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_param PATH_INFO $fastcgi_path_info;
+    fastcgi_hide_header X-Powered-By;
     client_max_body_size 256M;
 #        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
 #        include fastcgi_params;
