--- a/config/dockerfile-php8
+++ b/config/dockerfile-php8
@@ -14,6 +14,7 @@ RUN apk add --no-cache --virtual build-essentials \
     docker-php-ext-install exif && \
     docker-php-ext-install zip && \
     apk del build-essentials && rm -rf /usr/src/php*
-
+RUN sed "s/127.0.0.1/0.0.0.0/g" -i /usr/local/etc/php-fpm.d/www.conf
+RUN apk add mysql-client
 RUN wget https://getcomposer.org/composer-stable.phar -O /usr/local/bin/composer && chmod +x /usr/local/bin/composer
 EXPOSE 9000
