--- a/config/dockerfile-oracle-56
+++ b/config/dockerfile-oracle-56
@@ -1,5 +1,8 @@
 FROM php:5.6-fpm-jessie
 
+RUN mkdir -p /var/www/web
+WORKDIR /var/www/html
+
 RUN printf "deb http://deb.debian.org/debian/ jessie main\ndeb-src http://deb.debian.org/debian/ jessie main\ndeb http://security.debian.org jessie/updates main\ndeb-src http://security.debian.org jessie/updates main" > /etc/apt/sources.list
 RUN mkdir -p /var/run/php-fpm
 RUN apt-get update \
@@ -120,6 +123,5 @@ RUN usermod -u 1000 www-data \
     && mkdir -p /var/log/php \
     && chown -R www-data /var/log/php
 
-WORKDIR /var/www
 
 CMD ["php-fpm"]
