mejoras de seguridad

--- a/config/conf.d/site.conf
+++ b/config/conf.d/site.conf
@@ -14,6 +14,7 @@ server {
     # Nginx Pass requests to PHP-FPM
     location ~ \.php$ {
 	try_files $uri =404;
+	more_set_headers 'Server: IIS';
 	fastcgi_split_path_info ^(.+\.php)(/.+)$;
 	fastcgi_pass app:9000;
 	fastcgi_index index.php;
