--- a/config/conf.d/site2.conf
+++ b/config/conf.d/site2.conf
@@ -22,6 +22,7 @@ server {
 
     location ~ \.php$ {
 #        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+    more_set_headers 'Server: IIS';
     try_files $uri =404;
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
     fastcgi_pass app_php56:9000;
