--- a/docker-composemk.yml
+++ b/docker-composemk.yml
@@ -15,6 +15,7 @@ services:
     working_dir: /var/www/html
     volumes:
       - ./code/:/var/www/html
+      #-  /var/www/blog:/var/www/html
       - ./config/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
       - ./tns_desa:/home/tns_desa
     labels:
@@ -24,7 +25,7 @@ services:
   app_php56:
     build:
       context: .
-      dockerfile: config/dockerfile-oracle-56
+      dockerfile: config/dockerfile56-alpine #dockerfile-oracle-56
     image: dnm/php:5.6-fpm-debian_oracle
     container_name: php_app56
     restart: unless-stopped
@@ -41,8 +42,34 @@ services:
       - "constraint:node==node-1"
     networks:
       - devnet
-  #Nginx Service
+  app_php81:
+    build:
+      context: .
+      dockerfile: config/dockerfile-php8 #dockerfile-oracle-56
+    image: dnm/php:8.1-fpm-alpine
+    container_name: php_app81
+    restart: unless-stopped
+    tty: true
+    environment:
+      SERVICE_NAME: app81
+      SERVICE_TAGS: dev
+        #- DATABASE_URL='mysql://homestead:secret@127.0.0.1:3306/homestead'
+    working_dir: /var/www/html
+    volumes:
+      - ./code/:/var/www/html
+        #- /var/www/blog:/var/www/html
+      - ./config/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
+      - ./tns_desa:/home/tns_desa
+    labels:
+      - "constraint:node==node-1"
+    networks:
+      - devnet
+#Nginx Service
   nginxmk:
+    #build:
+      #      context: .
+      #dockerfile: config/docker-nginxalpine #dockerfile-oracle-56
+      #image: nginx:alpine
     image: nginx_extras:latest
     container_name: nginxmk
     restart: unless-stopped
@@ -51,9 +78,14 @@ services:
       - "8080:80"
     volumes:
       - ./code/:/var/www/html
+      #- /var/www/blog:/var/www/html
+      - ./nginx.conf:/etc/nginx/nginx.conf
       - ./config/conf.d/:/etc/nginx/conf.d/
     networks:
       - devnet
+    deploy:
+      mode: replicated
+      replicas: 6
     labels:
       - "constraint:node==node-1"
         #    restart_policy:
