--- a/config/dockerfile-php8
+++ b/config/dockerfile-php8
@@ -1,5 +1,5 @@
-ARG PHP_VERSION=8.1.1
-FROM php:${PHP_VERSION}-fpm-alpine3.15
+ARG PHP_VERSION=8.2.8
+FROM php:${PHP_VERSION}-fpm-alpine3.17
 RUN apk add --no-cache mysql-client msmtp perl wget procps shadow libzip libpng libjpeg-turbo libwebp freetype icu
 
 RUN apk add --no-cache --virtual build-essentials \
@@ -17,4 +17,10 @@ RUN apk add --no-cache --virtual build-essentials \
 RUN sed "s/127.0.0.1/0.0.0.0/g" -i /usr/local/etc/php-fpm.d/www.conf
 RUN apk add mysql-client
 RUN wget https://getcomposer.org/composer-stable.phar -O /usr/local/bin/composer && chmod +x /usr/local/bin/composer
+COPY envsubst.sh /envsubst.sh
+COPY entrypoint.sh /entrypoint.sh
+
+STOPSIGNAL SIGQUIT
+
+ENTRYPOINT ["/entrypoint.sh"]
 EXPOSE 9000
