--- a/config/conf.d/site.conf
+++ b/config/conf.d/site.conf
@@ -5,7 +5,7 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     # Laravel web root directory
-    root /var/www/html/public;
+    root /var/www/html;
     index index.php index.html;
     location / {
         try_files $uri $uri/ /index.php?$query_string;
