--- a/docker-compose8_1_nginx.yml
+++ b/docker-compose8_1_nginx.yml
@@ -3,26 +3,19 @@ services:
 
   #PHP App
   app:
-  #  build:
-  #    context: .
-  #    dockerfile: config/dockerfile
-    image: php:8.2.8
-    container_name: php_app
+    image: php
+    container_name: php
     restart: unless-stopped
     tty: true
     environment:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
-    working_dir: /var/www/html
-    volumes:
-      - ./code/:/var/www/html
-      - ./config/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
     networks:
       - labnet
 
   #Nginx Service
   nginx:
-    image: nginx:latest
+    image: nginx
     container_name: nginx
     restart: unless-stopped
     tty: true
